samples/_failures_safe/1761516330_2866ea_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_22aa30ba.c: In function ‘dijkstra’:
./samples/SAFE/__tmp_22aa30ba.c:187:20: error: missing terminating " character
  187 |             printf("Vertex
      |                    ^~~~~~~
./samples/SAFE/__tmp_22aa30ba.c:187:13: error: expected expression at end of input
  187 |             printf("Vertex
      |             ^~~~~~
./samples/SAFE/__tmp_22aa30ba.c:187:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_22aa30ba.c:187:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_22aa30ba.c:187:13: error: expected declaration or statement at end of input
